LPS-39845 - Fix ratings alignment when wiki page has no views

--- a/portal-web/docroot/html/portlet/wiki/css/main.css
+++ b/portal-web/docroot/html/portlet/wiki/css/main.css
@@ -233,6 +233,14 @@
 
 	.page-actions {
 		margin-top: 1.5em;
+
+		&:after {
+			clear: both;
+			content: ".";
+			display: block;
+			height: 0;
+			visibility: hidden;
+		}
 	}
 
 	.page-actions .article-actions {
